[gd_scene load_steps=4 format=3 uid="uid://bobnmsoacbsaj"]

[ext_resource type="Script" path="res://Scenes/end.gd" id="1_k5111"]
[ext_resource type="Texture2D" uid="uid://bkpjk03fq5juu" path="res://Assets/you lost.png" id="2_vqueu"]
[ext_resource type="Texture2D" uid="uid://cxv1gbklxhxj" path="res://Assets/end_screen.png" id="3_ntgue"]

[node name="End" type="Node2D"]
position = Vector2(-5.96046e-08, 0)
scale = Vector2(3.12533, 3.09595)
script = ExtResource("1_k5111")

[node name="YouLost" type="Sprite2D" parent="."]
visible = false
position = Vector2(409.547, 232.565)
scale = Vector2(2.2259, 2.23614)
texture = ExtResource("2_vqueu")

[node name="EndScreen" type="Sprite2D" parent="."]
visible = false
position = Vector2(409.547, 232.565)
scale = Vector2(2.2259, 2.23614)
texture = ExtResource("3_ntgue")

[node name="EndTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="EndTimer" to="." method="_on_end_timer_timeout"]
